--- a/src/main/java/design_patterns/设计模式概述.md
+++ b/src/main/java/design_patterns/设计模式概述.md
@@ -29,3 +29,18 @@
     缺点：
         没有抽象层，因此扩展很难。
         职责过重，在一定程序上违背了单一职责。
+
+5、模版设计模式
+        模版方法模式就是定义一个算法的骨架，而将具体的算法延迟到子类中来实现
+    优点：
+        使用模版方法模式，在定义算法骨架的同时，可以很灵活的实现具体的算法，满足用户灵活多变的需求
+    缺点：
+        如果算法骨架有修改的话，则需要修改抽象类
+
+6、装饰设计模式
+        装饰模式就是使用被装饰类的一个子类的实例，在客户端将这个子类的实例交给装饰类。是继承的替代方案
+    优点：
+        使用装饰模式，可以提供比继承更灵活的扩展对象的功能，它可以动态的添加对象的功能，并且可以随意的组合这些功能
+    缺点：
+        正因为可以随意组合，所以就可能出现一些不合理的逻辑
+
